--- a/views/search.pug
+++ b/views/search.pug
@@ -1,5 +1,13 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
   .search__header
     h3 Search for #{searchingBy}
+  .search__video 
+    each item in videosData
+      +videoBlock({
+        title:item.title,
+        views: item.views,
+        videoFile: item.videoFile
+      })
