--- a/views/search.pug
+++ b/views/search.pug
@@ -5,7 +5,7 @@ block content
   .search__header
     h3 Search for #{searchingBy}
   .search__video 
-    each item in videosData
+    each item in videos
       +videoBlock({
         title:item.title,
         views: item.views,
